--- a/src/components/Players/players.scss
+++ b/src/components/Players/players.scss
@@ -1,3 +1,194 @@
-.card {
-  width: 8rem;
+
+
+
+.container {
+  position: relative;
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px;
 }
+
+.container .card {
+  position: relative;
+  height: 250px;
+  background: #fff;
+  display: flex;
+  width: 45%;
+  margin: 30px 0;
+}
+
+.container .card .imgBx {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+}
+
+.container .card:hover .imgBx {
+  width: 150px;
+  height: 150px;
+  left: -75px;
+  top: calc(50% - 75px);
+  transition: 0.5s ease-in-out;
+  background: #ff0057;
+}
+
+.container .card .imgBx::before {
+  content: attr(data-text);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 6em;
+  color: rgba(255,255,255,.05);
+  font-weight: 700;
+}
+
+.container .card .imgBx img {
+  max-width:100px;
+  transition: 0.5s ease-in-out;
+}
+
+.container .card:hover .imgBx img {
+  max-width: 75px;
+}
+
+.container .card .content {
+  position: absolute;
+  right: 0;
+  width: calc(100% - 75px);
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .card .content h2 {
+  margin-bottom: 5px;
+  font-size: 24px;
+}
+
+.container .card .content .aLink1 {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background: rgb(202, 189, 0);
+  text-decoration: none;
+  color:#fff;
+}
+
+.container .card .content .aLink1:hover {
+  color:#333;
+}
+
+.container .card .content .aLink2:hover {
+  color:#333;
+}
+
+.container .card .content .aLink2 {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background: rgb(179, 2, 2);
+  text-decoration: none;
+  color:#fff;
+}
+
+@media (max-width:992px) {
+  .container {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container .card {
+    width: 400px;
+  }
+}
+
+@media (max-width:768px) {
+  .container .card {
+    max-width: 300px;
+    flex-direction: column;
+    height: auto;
+  }
+  .container .card .imgBx {
+    position: relative;
+  }
+  .container .card .imgBx,
+  .container .card:hover .imgBx {
+    width: 100%;
+    height: 200px;
+    left: 0;
+  }
+  .container .card .imgBx img,
+  .container .card:hover .imgBx img {
+    max-width: 100px;
+  }
+  .container .card .content {
+    position: relative;
+    width: 100%;
+  }
+}
+
+/* Button effects */
+/*
+.container1 {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container1 .aLink{
+  position: relative;
+  width: 300px;
+  height: 75px;
+  margin: 10px 0;
+  font-size: 24px;
+  color: #000;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.container1 .aLink:hover {
+  color: #fff;
+}
+.container1 .aLink:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: url('btn-bg2.png');
+  background-size: cover;
+  transform-origin: left;
+  transition: 0.5s;
+}
+
+.container1 .aLink:hover:before {
+  width: 100%;
+}
+
+.container1 .aLink span {
+  position: relative;
+  z-index: 1;
+}
+*/
