--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,6 +1,180 @@
+/* 
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #16384c;
+}
+
+
+*/
+
+/* start below finished css working for card hover up
+
+.container {
+  position: relative;
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 30px;
+}
+
+.container .card {
+  position: relative;
+  max-width: 300px;
+  height: 215px;
+  background: #fff;
+  margin: 30px 10px;
+  padding: 20px 15px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 5px 202px rgba(0,0,0,0.5);
+  transition: 0.3s ease-in-out;
+  margin-bottom: 140px;
+}
+
+.container .card:hover {
+  height: 420px;
+}
+
+.container .card .imgBx {
+  position: relative;
+  width: 260px;
+  height: 260px;
+  top: -60px;
+  left: 20px;
+  z-index: 1;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+}
+
+.container .card .imgBx img {
+  /* max-width: 100%; */
+  /* max-height: 350px;
+  border-radius: 4px;
+  display: block;
+  max-width:530px;
+  max-height:255px;
+  /* width: auto; 
+  height: auto;
+}
+
+.container .card .content {
+  position: relative;
+  margin-top: -140px;
+  padding: 10px 15px;
+  text-align: center;
+  color: #111;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.container .card:hover .content {
+  visibility: visible;
+  opacity: 1;
+  margin-top: -40px;
+  transition-delay: 0.3s;
+}
+
+end above finished css working for card hover up */
+
+/*
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically 
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+
+/*
+.swiper-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-image: url('https://ak.picdn.net/shutterstock/videos/1011844370/thumb/1.jpg');
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+*/
+
 /*
 .field {
   background-image: url('https://ak.picdn.net/shutterstock/videos/1011844370/thumb/1.jpg');
   background-repeat: no-repeat;
   background-size: 100% 1000%;
 }*/
+/*
+
+style="background-image:url(./images/nature-1.jpg)"
+style="background-image:url(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+(./images/nature-
+style="background-image:url
+style="background-image:url
+style="background-image:url
+style="background-image:url
+style="background-image:url
+style="background-image:url
+style="background-image:url
+style="background-image:url
+
+*/
+
+/*
+
+<div classNameName="row">
+            <div className="swiper-container">
+              <div className="swiper-wrapper">
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+                <div className="swiper-slide" ></div>
+              </div>
+            </div>
+          </div>
+*/
